<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/main_package"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

<!--    android:entries="@array/listPackages" -->
    <Spinner
        android:id="@+id/spinPackage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_packageHint"/>

    <TextView
        android:text="@string/main_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_searchHint"/>

    <TextView
        android:text="@string/main_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/listResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
